# maritime-atlas

./: .claudeignore  .env.example  .gitignore  K8S-MIGRATION-ROADMAP.md  LICENSE  README.md  compose.gs-refacto.yml  compose.mini-blue.yml  docker-compose.yml  docker-stack.yml
.github/workflows/: build-and-push.yml
db/init/: 01-schema.sql  02-views.sql  03-ttl-jobs.sql  04-lightning.sql  05-alerts.sql  06-geoserver-cluster.sql
db/migrate/: 2026-05-15-uniform-retention.sql
docs/: aetherwx-animation.md
frontend/: Dockerfile  angular.json  nginx-cache.conf  nginx.conf  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
geoserver/: Dockerfile  gwc-blobstore-s3.sh  provision.sh  tomcat-context.xml.tpl
geoserver/cluster/: cluster-bootstrap.sh  cluster.properties  controlflow.properties  hazelcast.xml  jdbcconfig.properties  jdbcstore.properties  nginx-lb.conf  pg-gs-init.sql
geoserver/maritime-cascade-time-forward/: pom.xml
geoserver/maritime-gwc-init/: pom.xml
geoserver/styles/: buoys-default.sld  precipitation-6h-log.sld  sst-rainbow.sld  temp-2m-thermal.sld  wave-hs-rainbow.sld  wind-speed-rainbow.sld
k8s-bootstrap/: Dockerfile.geoserver-full  Dockerfile.pg-timescale  argocd-values.yaml
qa/: README.md  check-data.mjs  check-time.mjs  check-ui.mjs  drift.mjs  gen-manifest.mjs  layers.manifest.json  package-lock.json  package.json
qa/lib/: parse-registry.mjs  parse-registry.test.mjs  png-uniform.mjs  png-uniform.test.mjs  vector-sources.mjs  verdict.mjs  verdict.test.mjs
scripts/: summarize-logs-ollama.mjs
seaweedfs/: s3.json
services/ais-decoder/: package.json
services/ais-ingester/: Dockerfile  (+1 more)
services/grib-parser/: Dockerfile  pyproject.toml
services/grib-parser/src/: main.py
services/sst-fetcher/: Dockerfile  pyproject.toml
services/sst-fetcher/src/: main.py
services/weather-fetcher/: Dockerfile  pyproject.toml
services/weather-fetcher-arome/: Dockerfile  pyproject.toml
services/weather-fetcher-arome/src/: main.py
services/weather-fetcher/src/: main.py
(+242 files in other folders)
